# spTransKit

./: .Rhistory  README.md  pyproject.toml  requirements.txt  setup.py  sttransform_job.sh  sttransform_job_scrap.sh  test.py  transformations.py
.github/workflows/: python-package.yml
data/151673/: marker_genes.csv
data/151675/: marker_pathways.txt
data/DLPFC_151507/: coordinates.csv
data/DLPFC_151508/: coordinates.csv
data/DLPFC_151509/: coordinates.csv
data/DLPFC_151510/: coordinates.csv
data/DLPFC_151569/: coordinates.csv
data/DLPFC_151670/: coordinates.csv
data/DLPFC_151671/: coordinates.csv
data/DLPFC_151672/: coordinates.csv
data/DLPFC_151674/: coordinates.csv
data/DLPFC_151675/: coordinates.csv
data/DLPFC_151676/: coordinates.csv
data/small/: coordinates.csv  counts.csv
logo/: sptranskit.pptx
sptranskit/: __init__.py
src/: helpers.py  plotter.py  ranker.py  transformations.py
src/benchmarking/1.DataAcquisition/: da_helpers.py  data_acquisition.py
src/benchmarking/2.Transformation/: compeff_python.py  compeff_r.R  integrate_data.py  r_trans_subcounts.R  transformations.py  transformations_in_r.R
src/benchmarking/3.Benchmarks/: b_helpers.py  benchmarking.py  bio_benchmarks.py  nonbio_benchmarks.py
src/benchmarking/4.DownstreamAnalysis/: BayesSpace_pipeline.R  Giotto_SCE_pipeline.R  Giotto_SCG_pipeline.R  GraphST_pipeline.py  STAGATE_pipeline.py  SpaGCN_pipeline.py  downstream_SDD.py
src/clustering/: clustering.py  graph.py  graph_clusters.py
src/functions/: acosh.py  analyticpearson.py  cpm.py  cpmshiftedlog.py  deseq2.py  normalisr.py  pseudoshiftedlog.py  psinorm.py  raw.py  rawsize.py  scanpy_pearson_residual.py  scanpy_seurat.py  scanpy_weinreb.py  scanpy_zheng.py  shiftedlog.py  shiftedlogsize.py  tmm.py
src/sptranskit/: __init__.py  filter.py  helpers.py  test.py  transformations.py
src/sptranskit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+62 files in other folders)
