[project]
name = "sptranskit"
version = "0.0.10"
authors = [
  { name="Vivek Rajani", email="vsrajani03@gmail.com" 
    name="Yu Zhu", email="yu_zhu@brown.edu" },
]
description = "Transformation methods for spatial transcriptomics"
dependencies = ["typing", "pandas", "numpy", "scanpy", "normalisr", "rpy2"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/YMa-lab/spTransKit"
